--- a/index.html
+++ b/index.html
@@ -146,6 +146,28 @@
         />http://unurl.org/vizrom</a></h1>
     </article>
 
+    <article>
+        <h3>Resources</h3>
+        <ul>
+            <li>The Visual Display of Quantitative Information <i>Edward R.
+            Tufte</i><span class="small"><a
+            href="http://www.amazon.com/The-Visual-Display-Quantitative-Information/dp/0961392142">(Amazon)</a></span></li>
+            <li>The Functional Art <i>Alberto Cairo</i> <span
+            class="small"><a
+            href="http://www.amazon.com/Functional-Art-introduction-information-visualization-ebook/dp/B0091SXDOM/">(Amazon)</a>
+            </span></li>
+            <li>The Data Journalism Handbook <i>J. Gray, L. Chambers, L.
+            Bonnegru (ed.)</i> <span class="small"><a
+            href="http://datajournalismhandbook.org/">(Web)</a> <a
+            href="http://www.amazon.com/Data-Journalism-Handbook-Jonathan-Gray-ebook/dp/B008KSAPG8">(Amazon)</a></li>
+            <li>Visualising Information for Advocacy <i>Tactical Tech</i>
+            <span class="small"><a
+            href="https://visualisingadvocacy.org/">(Web)</a></span</li>
+            <li>Scraping for Journalists <i>Paul Bradshaw</i><span
+            class="small"><a
+            href="https://leanpub.com/scrapingforjournalists">(Leanpub)</a></span></li>
+        </ul>
+    </article>
     </section>
 
   </body>
