--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
     </article>
 
     <article>
+        <h3>Visualization Tools</h3>
+        <ul>
+            <li><a href="http://datawrapper.de">datawrapper</a></li>
+            <li><a href="http://infogr.am">infogram</a></li>
+            <li><a href="http://raw.densitydesign.org/">RAW</a></li>
+            <li><a href="http://nytimes.github.io/svg-crowbar/">SVG
+            Crowbar</a></li>
+        </ul>
+    </article>
+
+    <article>
         <h3>Resources</h3>
         <ul>
             <li>The Visual Display of Quantitative Information <i>Edward R.
