--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <html>
   <head>
-    <title>Extracting data from PDFs</title>
+    <title>A short intro to Data Visualization</title>
 
     <meta charset='utf-8'>
     <script
