added wonderful pie chart...

--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
       
       <article>
         <h3>A word on Pie Charts</h3>
+        <img width="100%" src="images/Wonderful-Pie.png">
+
+      </article>
+      <article>
+        <h3>A word on Pie Charts</h3>
         <ul>
             <li>Avoid</li>
             <li>Only if you show parts of a whole</li>
